--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -19,13 +19,14 @@ before installing Mylyn 3.0.</p>
 
 <p><span style="font-weight: 700; background-color: #E0D0E6">New in Mylyn 3.1</span> </p>
 <ul>
-	<li><a href="#help">Mylyn Help (1)</a></li>
-	<li><a href="#task-list">Task List (5)</a></li>
-	<li><a href="#task-editor">Task Editor (7)</a></li>
+	<li><a href="#help">Mylyn Help and Internationalization (2)</a></li>
+	<li><a href="#task-list">Task List (6)</a></li>
+	<li><a href="#task-editor">Task Editor (5)</a></li>
 	<li><a href="#task-context">Task Context (1)</a></li>
 	<li><a href="#bugzilla">Bugzilla Connector (4)</a></li>
 	<li><a href="#jira">JIRA Connector (3)</a></li>
 	<li><a href="#wikitext">WikiText (5)</a></li>
+	<li><a href="#framework">Framework and API (1)</a></li>
 </ul>
 
 <h2><a name="help">Help and Internationalization</a></h2>
@@ -136,6 +137,23 @@ before installing Mylyn 3.0.</p>
 			You can locate any one of these tasks within your personal task list (assuming it is already there) by right clicking on the task in the Search results view and selecting Task List from the popup's Show In sub menu. </p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.1/search-show-in-tasklist.png"></td>
+		</tr>
+		<tr>
+			<td colspan="2">
+			<hr>
+			</td>
+		</tr>
+</table>
+
+<table cellpadding="10" cellspacing="0" id="table415">
+		<tr>
+			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
+			<p align="right"><b>Add to Category</b></p>
+			</td>
+			<td valign="top" width="70%">
+			<p align="left">Quickly add tasks within the Search results view to your Task List.  Right click on a task and select "Add to Task List Category" and the task will be add to the selected category withing your Task List.</p>
+			<p class="MsoPlainText">
+			<img border="0" src="images/3.1/search-add-to-category.png"></td>
 		</tr>
 		<tr>
 			<td colspan="2">
