REOPENED - bug 263861: prepare New & Noteworthy for 3.1 https://bugs.eclipse.org/bugs/show_bug.cgi?id=263861

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -504,7 +504,7 @@ before installing Mylyn 3.0.</p>
 <p class="MsoPlainText">&nbsp;</p>
 <h2><a name="wikitext">Framework and API</a></h2>
 
-<p>See <a href="http://wiki.eclipse.org/Mylyn_Porting_Guide">porting guide</a> for additional notes on API changes.
+<p>See <a href="http://wiki.eclipse.org/Mylyn_Porting_Guide">porting guide</a> for additional notes on API changes.</p>
 
 <table cellpadding="10" cellspacing="0" id="table415">
 		<tr>
