RESOLVED - bug 263861: prepare New & Noteworthy for 3.1 https://bugs.eclipse.org/bugs/show_bug.cgi?id=263861

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -3,7 +3,25 @@
 
 <p><b><i>DRAFT</i> New &amp; Noteworthy for Mylyn 3.1</b></p>
 
-<a href="https://bugs.eclipse.org/bugs/buglist.cgi?short_desc_type=allwordssubstr&short_desc=&product=Mylyn&target_milestone=3.1&long_desc_type=allwordssubstr&long_desc=&keywords_type=allwords&keywords=noteworthy&order=Importance">Query for noteworthy bugs</a>
+<table border="1" style="border-collapse: collapse" width="100%" id="table128" cellpadding="4" bordercolor="#FFFFFF">
+	<tr>
+		<td bgcolor="#595791" width="7%" align="center"><b>
+		<font color="#FFFFFF" size="1">Release</font></b></td>
+		<td bgcolor="#595791" width="5%" align="center"><b>
+		<font color="#FFFFFF" size="1">Resolved 
+		</font></b></td>
+		<td bgcolor="#595791" width="*" align="center"><b>
+		<font color="#FFFFFF" size="1">Community Contributions</font></b></td>
+	</tr>
+	<tr>
+		<td bgcolor="#E0D0E6"><font size="1">3.1<br>
+		<i>Mar 17, 2008 (planned)</i></font></td>
+		<td bgcolor="#E0D0E6" align="center">
+		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&target_milestone=3.1&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=&chfieldto=&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
+		<font size="1">421</font><br><font size="1">bugs</font></a></td>
+		<td bgcolor="#E0D0E6"><font size="1">...</font></td>
+	</tr>
+</table>
 
 <p><b>Also see the New &amp; Noteworthy for: 
 <a href="http://eclipse.org/mylyn/new/new-3.0.html">Mylyn 3.0</a>, 
