RESOLVED - bug 263861: prepare New & Noteworthy for 3.1 https://bugs.eclipse.org/bugs/show_bug.cgi?id=263861

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -52,9 +52,9 @@ before installing Mylyn 3.0.</p>
 <table cellpadding="10" cellspacing="0" id="table414">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Mylyn Help Integrated</b></p>
+			<p align="right"><b>Integrated Help</b></p>
 			</td>
-			<td valign="top" width="70%">
+			<td valign="top" width="85%">
 			<p align="left">The Mylyn wiki is a great source of information for both new users and those building upon or integrating with Mylyn. A snapshot of the online wiki is now included in Mylyn releases and is accessible from the main Eclipse Help index (Help > Help Contents > <b>Tasks</b>).</p>
 			<p align="left">The automated inclusion of Mylyn's wiki is possible thanks to <a href="#wikitext">WikiText</a> technology.</p>
 			<p class="MsoPlainText">
@@ -70,9 +70,9 @@ before installing Mylyn 3.0.</p>
 <table cellpadding="10" cellspacing="0" id="table414">
 		<tr>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
-			<p align="right"><b>Mylyn Internationalization</b></p>
+			<p align="right"><b>Internationalization</b></p>
 			</td>
-			<td valign="top" width="70%">
+			<td valign="top" width="85%">
 			<p align="left">Mylyn has been internationalized and through the <a href="http://babel.eclipse.org/babel/">Eclipse Babel</a> project, users can help translate Mylyn to other languages.</p>
 			<p align="left">Visit the <a href="http://babel.eclipse.org/babel/translate.php">Babel translate page</a>, select the target language and under Projects choose <b>tools.mylyn</b>, and then choose the latest version.</p>
 			<p class="MsoPlainText">
@@ -92,7 +92,7 @@ before installing Mylyn 3.0.</p>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
 			<p align="right"><b>New Task Dropdown</b></p>
 			</td>
-			<td valign="top" width="70%">
+			<td valign="top" width="85%">
 			<p align="left">The New Task button has a dropdown menu which allows quick selection of the repository you want to create a new task on.
 			The menu also has actions for creating new Categories, Queries, and for adding new Task Repositories.</p>
 			<p class="MsoPlainText">
@@ -110,7 +110,7 @@ before installing Mylyn 3.0.</p>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
 			<p align="right"><b>Local Subtasks</b></p>
 			</td>
-			<td valign="top" width="70%">
+			<td valign="top" width="85%">
 			<p align="left">Local subtask support is now out of incubation.
 			Create new local subtasks by right+clicking on a local task in te
 			Task List and selecting New Subtask from the popup menu. You can
@@ -132,7 +132,7 @@ before installing Mylyn 3.0.</p>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
 			<p align="right"><b>Repository Settings Page</b></p>
 			</td>
-			<td valign="top" width="70%">
+			<td valign="top" width="85%">
 			<p align="left">The Task Repository settings page has been streamlined and now includes a Task Editor Settings section where the <a href="#wikitext">WikiText</a> dialect can be chosen for your Task Editor.</p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.1/task-repository-settings-page.png"></td>
@@ -150,7 +150,7 @@ before installing Mylyn 3.0.</p>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
 			<p align="right"><b>Show In Task List</b></p>
 			</td>
-			<td valign="top" width="70%">
+			<td valign="top" width="85%">
 			<p align="left">Upon executing a task search the Search results view becomes populated with many tasks that mach the query.  
 			You can locate any one of these tasks within your personal task list (assuming it is already there) by right clicking on the task in the Search results view and selecting Task List from the popup's Show In sub menu. </p>
 			<p class="MsoPlainText">
@@ -168,7 +168,7 @@ before installing Mylyn 3.0.</p>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
 			<p align="right"><b>Add to Category</b></p>
 			</td>
-			<td valign="top" width="70%">
+			<td valign="top" width="85%">
 			<p align="left">Quickly add tasks within the Search results view to your Task List.  Right click on a task and select "Add to Task List Category" and the task will be add to the selected category withing your Task List.</p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.1/search-add-to-category.png"></td>
@@ -186,7 +186,7 @@ before installing Mylyn 3.0.</p>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
 			<p align="right"><b>Open Search with Browser</b></p>
 			</td>
-			<td valign="top" width="70%">
+			<td valign="top" width="85%">
 			<p align="left">The search results popup menu now includes a "Open Search with Browser" action that runs the current search in the default browser.</p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.1/search-open-with-browser.png"></td>
@@ -207,7 +207,7 @@ before installing Mylyn 3.0.</p>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
 			<p align="right"><b>WikiText</b></p>
 			</td>
-			<td valign="top" width="70%">
+			<td valign="top" width="85%">
 			<p align="left">The WikiText component is now part of the Mylyn release and is integrated into the Task Editor. Author and preview comments in your choice of 5 popular markup languages:
 </p>
 
@@ -245,7 +245,7 @@ before installing Mylyn 3.0.</p>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
 			<p align="right"><b>Schedule Task Toolbar Button</b></p>
 			</td>
-			<td valign="top" width="70%">
+			<td valign="top" width="85%">
 			<p align="left">Tasks can be scheduled through the Schedule Task button in the Task Editor toolbar. The button's default action (which results from pressing the button instead of choosing from the drop down) will schedule the task for Today.</p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.1/taskeditor-schedule-for.png"></td>
@@ -262,7 +262,7 @@ before installing Mylyn 3.0.</p>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
 			<p align="right"><b>Add Tasks not in Task List</b></p>
 			</td>
-			<td valign="top" width="70%">
+			<td valign="top" width="85%">
 			<p align="left">When a task is opened that doesn't exists in your Task List (i.e. when opening a search hit in the Search View), a hyperlinked message is displayed in the editor's banner. Click the link to add the task to the Uncategorized category within your Task List.</p>
 			<p align="left">We recommend adjusting the queries in the task list to encompass all tasks you are interested in so that this doesn't become a standard workflow.</p>
 			<p class="MsoPlainText">
@@ -280,7 +280,7 @@ before installing Mylyn 3.0.</p>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
 			<p align="right"><b>Resolved Bugs in Strikethrough</b></p>
 			</td>
-			<td valign="top" width="70%">
+			<td valign="top" width="85%">
 			<p align="left">Hyperlinks to resolved bugs within comments in the Task Editor will now be displayed in strikethrough font. Strikethrough also now works on platforms where this wasn't previsouly available (Linux, Mac).</p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.1/tasks-resolved-strikethrough.png"></td>
@@ -297,7 +297,7 @@ before installing Mylyn 3.0.</p>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
 			<p align="right"><b>Comment folding</b></p>
 			</td>
-			<td valign="top" width="70%">
+			<td valign="top" width="85%">
 			<p align="left">When a task has large number of comments, the comments section will fold comments by date, 
 			grouping them into Recent and Older sections.  This makes working with tasks with a large number of comments much smoother since the editor
 			 is not unnecessarily long due to comments.  Upon opening, new comments are revealed while old comments are folded.  Pressing the expand all button will expand all comments since your last comment. Press again to unfold older tasks.</p>
@@ -320,7 +320,7 @@ before installing Mylyn 3.0.</p>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
 			<p align="right"><b>Improved exclusion upon checkout and update</b></p>
 			</td>
-			<td valign="top" width="70%">
+			<td valign="top" width="85%">
 			<p align="left">Context exclusion has been improved for scenarios such as CVS checkout where a large number of files are brought into the workspace.
 			Formerly all files would pollute the currently active task context. This has be greatly improved so that only explicitly created resources are contributed to the active task context.</p>
 			<p class="MsoPlainText">
@@ -343,7 +343,7 @@ before installing Mylyn 3.0.</p>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
 			<p align="right"><b>Bugzilla 3.2</b></p>
 			</td>
-			<td valign="top" width="70%">
+			<td valign="top" width="85%">
 			<p align="left">Bugzilla 3.2 is supported including the additional custom field types introduced (see below) and new security measures introdued in Bugzilla 3.2.2.</p>
 		</tr>
 		<tr>
@@ -358,7 +358,7 @@ before installing Mylyn 3.0.</p>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
 			<p align="right"><b>Support for Deprecating Patches</b></p>
 			</td>
-			<td valign="top" width="70%">
+			<td valign="top" width="85%">
 			<p align="left">Right click on attachments to mark as deprecated.  Obsolete/deprecated attachments are grayed out and new incoming attachments are highlighted.</p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.1/taskeditor-attachment-obsolete.png"></td>
@@ -375,7 +375,7 @@ before installing Mylyn 3.0.</p>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
 			<p align="right"><b>Custom Fields and Flags</b></p>
 			</td>
-			<td valign="top" width="70%">
+			<td valign="top" width="85%">
 			<p align="left">Custom fields (configured server side) are accessible within the Attributes section of the Bugzilla Task Editor.  Field types supported include Free Text,
  Drop Down, Multiple-Selection Box, Large Text Box, and Date/Time field.
 			</p>
@@ -395,7 +395,7 @@ before installing Mylyn 3.0.</p>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
 			<p align="right"><b>Move between products</b></p>
 			</td>
-			<td valign="top" width="70%">
+			<td valign="top" width="85%">
 			<p align="left">Move bugs between existing products via
 			the Task Editor when using a Bugzilla 3.0 and greater repository. Simply chose an
 			alternate product from the Product field and other product
@@ -423,7 +423,7 @@ before installing Mylyn 3.0.</p>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
 			<p align="right"><b>JIRA Worklog</b></p>
 			</td>
-			<td valign="top" width="70%">
+			<td valign="top" width="85%">
 			<p align="left">The JIRA worklog is now visible within the JIRA task editor when JIRA 3.12 or later is in use.</p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.1/jira-worklog.png"></td>
@@ -440,7 +440,7 @@ before installing Mylyn 3.0.</p>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
 			<p align="right"><b>Issue Type Scoped by Project</b></p>
 			</td>
-			<td valign="top" width="70%">
+			<td valign="top" width="85%">
 			<p align="left">Both new and existing JIRA task editor's issue type field now only lists types available to the selected project. Update your repository configuration is not seeing this scoping. (Note: requiries JIRA 3.12 or later)</p>
 		</tr>
 		<tr>
@@ -455,7 +455,7 @@ before installing Mylyn 3.0.</p>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
 			<p align="right"><b>Real Names</b></p>
 			</td>
-			<td valign="top" width="70%">
+			<td valign="top" width="85%">
 			<p align="left">Real names are now displayed for Assigned to and Reporter and if available for comment and attachment authors.</p>
 			<p class="MsoPlainText">
 			<img border="0" src="images/3.1/jira-real-names.png"></td>
@@ -471,7 +471,7 @@ before installing Mylyn 3.0.</p>
 <p class="MsoPlainText">&nbsp;</p>
 <h2><a name="wikitext">WikiText</a></h2>
 
-		<table cellpadding="10" cellspacing="0" class="category category1"><tr class="item item1"><th align="right" valign="top" width="15%" bgcolor=#E0D0E6>Markup Editor</th><td align="left" valign="top" width="70%">
+		<table cellpadding="10" cellspacing="0" class="category category1"><tr class="item item1"><th align="right" valign="top" width="15%" bgcolor=#E0D0E6>Markup Editor</th><td align="left" valign="top" width="85%">
 				<p>
 				WikiText provides an integrated source editor for authoring files containing wiki markup.
 				The editor provides content assist, validation, folding, source formatting, an integrated preview, 
@@ -489,7 +489,7 @@ before installing Mylyn 3.0.</p>
 					<li>TracWiki</li>
 					<li>TWiki</li>
 				</ul>
-			</td></tr><tr><td colspan="2"><hr/></td></tr><tr class="item item0"><th align="right" valign="top" width="15%" bgcolor=#E0D0E6>Markup Conversion</th><td align="left" valign="top" width="70%">
+			</td></tr><tr><td colspan="2"><hr/></td></tr><tr class="item item0"><th align="right" valign="top" width="15%" bgcolor=#E0D0E6>Markup Conversion</th><td align="left" valign="top" width="85%">
 				<p>
 				WikiText can convert lightweight markup to other formats including Eclipse Help, HTML, DocBook and DITA.  Conversion may be performed
 				within Eclipse or from Ant.
@@ -498,18 +498,18 @@ before installing Mylyn 3.0.</p>
 				<p>
 				The conversion framework is extensible and can support alternative output formats by extending a simple Document Builder API.
 				</p>
-			</td></tr><tr><td colspan="2"><hr/></td></tr><tr class="item item1"><th align="right" valign="top" width="15%" bgcolor=#E0D0E6>Content Assist</th><td align="left" valign="top" width="70%">
+			</td></tr><tr><td colspan="2"><hr/></td></tr><tr class="item item1"><th align="right" valign="top" width="15%" bgcolor=#E0D0E6>Content Assist</th><td align="left" valign="top" width="85%">
 				<p>
 				Using markup is easy with WikiText in part due to content assist in the editor.  Suggestions are provided in the editor when CTRL+Space is pressed,
 				making it easy to insert bold, italics, bulleted lists, headings and other markup.  
 				</p>
 				<img src="images/3.1/wikitext-content-assist.png"/>
-			</td></tr><tr><td colspan="2"><hr/></td></tr><tr class="item item0"><th align="right" valign="top" width="15%" bgcolor=#E0D0E6>Cheat Sheet</th><td align="left" valign="top" width="70%">
+			</td></tr><tr><td colspan="2"><hr/></td></tr><tr class="item item0"><th align="right" valign="top" width="15%" bgcolor=#E0D0E6>Cheat Sheet</th><td align="left" valign="top" width="85%">
 				<p>
 				If you forget markup syntax, pressing F1 in the editor will bring up a cheat sheet with markup language tips and syntax hints.
 				</p>
 				<img src="images/3.1/wikitext-cheatsheet.png"/>
-			</td></tr><tr><td colspan="2"><hr/></td></tr><tr class="item item1"><th align="right" valign="top" width="15%" bgcolor=#E0D0E6>Preferences</th><td align="left" valign="top" width="70%">
+			</td></tr><tr><td colspan="2"><hr/></td></tr><tr class="item item1"><th align="right" valign="top" width="15%" bgcolor=#E0D0E6>Preferences</th><td align="left" valign="top" width="85%">
 				<p>
 				The appearance of the source editor and preview can be altered easily with workspace preferences.  CSS is used to specify exactly how you would like
 				the markup to appear.  This gives you ultimate control over the appearance of the editor, editor preview and the Mylyn task editor.
@@ -529,7 +529,7 @@ before installing Mylyn 3.0.</p>
 			<td align="left" valign="top" width="15%" bgcolor=#E0D0E6>
 			<p align="right"><b>Task Editor Extensibility</b></p>
 			</td>
-			<td valign="top" width="70%">
+			<td valign="top" width="85%">
 			<p align="left">The task editor has become more extensible with
 			introduction of the
 			<code>org.eclipse.mylyn.tasks.ui.taskEditorExtensions</code> and <code>org.eclipse.mylyn.tasks.ui.taskEditorExtensionSettings</code> extension points.
