--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -15,11 +15,15 @@
 	</tr>
 	<tr>
 		<td bgcolor="#E0D0E6"><font size="1">3.1<br>
-		<i>Mar 17, 2008 (planned)</i></font></td>
+		<i>Mar 17, 2008</i></font></td>
 		<td bgcolor="#E0D0E6" align="center">
 		<a href="https://bugs.eclipse.org/bugs/buglist.cgi?query_format=advanced&short_desc_type=allwordssubstr&short_desc=&classification=Tools&product=Mylyn&target_milestone=3.1&long_desc_type=allwordssubstr&long_desc=&bug_file_loc_type=allwordssubstr&bug_file_loc=&status_whiteboard_type=allwordssubstr&status_whiteboard=&keywords_type=allwords&keywords=&emailtype1=substring&email1=&emailtype2=substring&email2=&bugidtype=include&bug_id=&votes=&chfieldfrom=&chfieldto=&chfield=resolution&chfieldvalue=&cmdtype=doit&order=Reuse+same+sort+as+last+time&field0-0-0=noop&type0-0-0=noop&value0-0-0=">
-		<font size="1">430</font><br><font size="1">bugs</font></a></td>
-		<td bgcolor="#E0D0E6"><font size="1">...</font></td>
+		<font size="1">432</font><br><font size="1">bugs</font></a></td>
+		<td bgcolor="#E0D0E6"><font size="1">Hiroyuki Inaba provided 57 patches for externalizing messages and user interface improvements, Frank Becker contributed 
+		40 patches that improved the Bugzilla Connector and tasks framework. Shawn Minto and David Shepherd provided numerous patches for
+		the tasks and context framework and Thomas Ehrnhoefer provided improvements for the JIRA connector. Additional contributions were 
+		provided by Jingwen Ou, Terry Hon, Martin Koei, Matthias Kempka, Eugene Kuleshov, Mark Kralj-Taylor, Andrew Eisenberg, Jorrit Schippers, 
+		Maarten Meijer, Mark Phippard and Tomasz Zarna.</font></td>
 	</tr>
 </table>
 
