--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -4,18 +4,12 @@
 <p>New &amp; Noteworthy for Mylyn weekly builds</b></p>
 
 <p><b>Also see the New &amp; Noteworthy for: 
-<a href="http://eclipse.org/mylyn/new/new.html">Mylyn 3.1</a>, 
-<a href="http://eclipse.org/mylyn/new/new-3.0.html">Mylyn 3.0</a>, 
-<a href="http://eclipse.org/mylyn/new/new-2.0.html">Mylyn 2.0</a>, 
-<a href="http://eclipse.org/mylyn/new/new-1.0.html">Mylyn 1.0-0.6</a>, <a href="http://eclipse.org/mylyn/new/new-0.5.html">
-Mylyn 0.5</a>,&nbsp;
-<a href="http://eclipse.org/mylyn/new/new-0.4.html">Mylyn 0.4</a>, <a href="http://eclipse.org/mylyn/new/new-0.3.html">
-Mylyn 0.3</a></b></p>
+<a href="http://eclipse.org/mylyn/new/">Mylyn 3.1</a></p>
 
 <hr>
 
 <ul>
-<li>No weekly builds for Mylyn 3.2 have been released, yet
+<li>No noteworthy changes for Mylyn 3.2, yet
 </ul>
 
 </body>
