NEW - bug 269430: [website] update Mylyn home page https://bugs.eclipse.org/bugs/show_bug.cgi?id=269430

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -4,7 +4,7 @@
 <p>New &amp; Noteworthy for Mylyn weekly builds</b></p>
 
 <p><b>Also see the New &amp; Noteworthy for: 
-<a href="http://eclipse.org/mylyn/new/">Mylyn 3.1</a></p>
+<a href="http://eclipse.org/mylyn/new/">Mylyn 3.1</a></b></p>
 
 <hr>
 
