RESOLVED - bug 266600: [api][editor] add Submit Button to a new footer section of the task editor https://bugs.eclipse.org/bugs/show_bug.cgi?id=266600

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -9,7 +9,7 @@
 <hr>
 
 <ul>
-<li>No noteworthy changes for Mylyn 3.2, yet
+<li>The submit button is now displayed in an always visible footer section of the Bugzilla editor (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266600">bug 266600</a>)
 </ul>
 
 </body>
