RESOLVED - bug 271204: round notification popup shell bottom corners https://bugs.eclipse.org/bugs/show_bug.cgi?id=271204

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -10,6 +10,7 @@
 
 <ul>
 <li>The submit button is now displayed in an always visible footer section of the Bugzilla editor (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266600">bug 266600</a>)
+<li>The presentation of the notification popup has been improved (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274656">bug 274656</a>)
 </ul>
 
 </body>
