--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -11,7 +11,10 @@
 <ul>
 <li>The submit button is now displayed in an always visible footer section of the Bugzilla editor (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266600">bug 266600</a>)
 <li>The presentation of the notification popup has been improved (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274656">bug 274656</a>)
+<br>
+<li>The JIRA task editor now supports logging of work (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262799">bug 262799</a>)
 </ul>
+
 
 </body>
 </html>
