RESOLVED - bug 216150: 2nd level sorting in Search view https://bugs.eclipse.org/bugs/show_bug.cgi?id=216150

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -13,6 +13,8 @@
 <li>The presentation of the notification popup has been improved (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274656">bug 274656</a>)
 <br>
 <li>The JIRA task editor now supports logging of work (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262799">bug 262799</a>)
+<br>
+<li>The search view now supports sorting (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=216150">bug 216150</a>)
 </ul>
 
 
