--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -15,6 +15,8 @@
 <li>The JIRA task editor now supports logging of work (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262799">bug 262799</a>)
 <br>
 <li>The search view now supports sorting (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=216150">bug 216150</a>)
+<br>
+<li>Connectors can be easily installed from the Add Task Repository wizard (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=272621">bug 272621</a>)
 </ul>
 
 
