NEW - bug 269430: [website] update Mylyn home page paragraph https://bugs.eclipse.org/bugs/show_bug.cgi?id=269430

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -16,6 +16,9 @@
 <br>
 <li>The search view now supports sorting (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=216150">bug 216150</a>)
 <br>
+<li>The submit button of the Bugzilla Task Editor is now always visible (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266600">bug 266600</a>)
+<li>The working set switcher now affects all windows (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=250497">bug 250497</a>)
+<li>Stack traces are now displayed in a pre-formatted block when WikiText is enabled  (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=272757">bug 272757</a>)
 <li>Connectors can be easily installed from the Add Task Repository wizard (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=272621">bug 272621</a>)
 </ul>
 
