--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -1,21 +1,21 @@
 <html>
 <body bgcolor="FFFFFF">
 
-<p>New &amp; Noteworthy for Mylyn weekly builds</b></p>
+<p><b>New &amp; Noteworthy for Mylyn Weekly Builds</b></p>
 
-<p><b>Also see the New &amp; Noteworthy for: 
-<a href="http://eclipse.org/mylyn/new/">Mylyn 3.1</a></b></p>
+<p>Also see the New &amp; Noteworthy for: 
+<a href="http://eclipse.org/mylyn/new/">Mylyn 3.1</a></p>
 
 <hr>
 
 <ul>
 <li>The submit button is now displayed in an always visible footer section of the Bugzilla editor (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266600">bug 266600</a>)
 <li>The presentation of the notification popup has been improved (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274656">bug 274656</a>)
-<br>
+<hr size="1">
 <li>The JIRA task editor now supports logging of work (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262799">bug 262799</a>)
-<br>
+<hr size="1">
 <li>The search view now supports sorting (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=216150">bug 216150</a>)
-<br>
+<hr size="1">
 <li>The submit button of the Bugzilla Task Editor is now always visible (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266600">bug 266600</a>)
 <li>The working set switcher now affects all windows (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=250497">bug 250497</a>)
 <li>Stack traces are now displayed in a pre-formatted block when WikiText is enabled  (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=272757">bug 272757</a>)
