ASSIGNED - bug 174413: [context] display orphaned element content on the Context editor tab https://bugs.eclipse.org/bugs/show_bug.cgi?id=174413

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -20,6 +20,7 @@
 <li>The working set switcher now affects all windows (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=250497">bug 250497</a>)
 <li>Stack traces are now displayed in a pre-formatted block when WikiText is enabled  (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=272757">bug 272757</a>)
 <li>Connectors can be easily installed from the Add Task Repository wizard (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=272621">bug 272621</a>)
+<li>Orphaned elements are now displayed on the context tab (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=174413">bug 174413</a>)
 </ul>
 
 
