RESOLVED - bug 276581: use a gradient background for the tooltip instead of the yellow https://bugs.eclipse.org/bugs/show_bug.cgi?id=276581

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -21,8 +21,9 @@
 <li>Stack traces are now displayed in a pre-formatted block when WikiText is enabled  (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=272757">bug 272757</a>)
 <li>Connectors can be easily installed from the Add Task Repository wizard (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=272621">bug 272621</a>)
 <li>Orphaned elements are now displayed on the context tab (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=174413">bug 174413</a>)
+<hr size="1">
+<li>Task List tooltips element now use a gradient (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=276581">bug 276581</a>)
 </ul>
-
 
 </body>
 </html>
