NEW - bug 266123: [patch] improve the capture method and the draw tool https://bugs.eclipse.org/bugs/show_bug.cgi?id=266123

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -10,6 +10,7 @@
 
 <ul>
 <li>The submit button is now displayed in an always visible footer section of the Bugzilla editor (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266600">bug 266600</a>)
+<b>Note:</b> This change has been reverted, discussion is on <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274790">bug 274790</a>.
 <li>The presentation of the notification popup has been improved (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274656">bug 274656</a>)
 <hr size="1">
 <li>The JIRA task editor now supports logging of work (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262799">bug 262799</a>)
@@ -23,6 +24,7 @@
 <li>Orphaned elements are now displayed on the context tab (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=174413">bug 174413</a>)
 <hr size="1">
 <li>Task List tooltips element now use a gradient (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=276581">bug 276581</a>)
+<li>Improved screen capture UI (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266123">bug 266123</a>)
 </ul>
 
 </body>
