--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -9,8 +9,6 @@
 <hr>
 
 <ul>
-<li>The submit button is now displayed in an always visible footer section of the Bugzilla editor (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266600">bug 266600</a>)
-<b>Note:</b> This change has been reverted, discussion is on <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274790">bug 274790</a>.
 <li>The presentation of the notification popup has been improved (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274656">bug 274656</a>)
 <hr size="1">
 <li>The JIRA task editor now supports logging of work (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262799">bug 262799</a>)
@@ -25,6 +23,9 @@
 <hr size="1">
 <li>Task List tooltips element now use a gradient (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=276581">bug 276581</a>)
 <li>Improved screen capture UI (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266123">bug 266123</a>)
+<hr size="1">
+<li>The submit button is now displayed in the header of the Bugzilla editor (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274790">bug 274790</a>)
+<b>Note:</b> Changes made for <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266600">bug 266600</a> that moved the submit button into a always visible footer part have been reverted.
 </ul>
 
 </body>
