NEW - bug 272093: streamline the task editor header https://bugs.eclipse.org/bugs/show_bug.cgi?id=272093

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -26,6 +26,11 @@
 <hr size="1">
 <li>The submit button is now displayed in the header of the Bugzilla editor (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=274790">bug 274790</a>)
 <b>Note:</b> Changes made for <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=266600">bug 266600</a> that moved the submit button into a always visible footer part have been reverted.
+<li>The task editor header has a big editable priority control now (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=272093">bug 272093</a>)
+<li>The local task editor has been improved and is now consistent with repository task editors (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=211096">bug 211096</a>)
+<li>The integrated bug reporting has been improved, see Help - Report Bug or Enhancement (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=212209">bug 212209</a>)
+<li>The attachment dialog now supports spell checking and wiki markup (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=245187">bug 245187</a>)
+<li>The open and activate task dialogs have an I'm feeling lazy button (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=248490">bug 248490</a>)
 </ul>
 
 </body>
