NEW - bug 275727: create release review slides for Mylyn 3.2 https://bugs.eclipse.org/bugs/show_bug.cgi?id=275727

--- a/new/new-weekly.html
+++ b/new/new-weekly.html
@@ -31,6 +31,9 @@
 <li>The integrated bug reporting has been improved, see Help - Report Bug or Enhancement (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=212209">bug 212209</a>)
 <li>The attachment dialog now supports spell checking and wiki markup (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=245187">bug 245187</a>)
 <li>The open and activate task dialogs have an I'm feeling lazy button (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=248490">bug 248490</a>)
+<hr size="1">
+<li>The local task editor allows selection of the task category now (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=199675">bug 199675</a>)
+<li>Multiple attachments can now be be selected and saved to a directory (<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=271197">bug 271197</a>)
 </ul>
 
 </body>
