NEW - bug 278169: create new & noteworthy for Mylyn 3.2 https://bugs.eclipse.org/bugs/show_bug.cgi?id=278169

--- a/new/new-3.2.html
+++ b/new/new-3.2.html
@@ -196,7 +196,9 @@ before installing Mylyn 3.0.</p>
 			<td valign="top" width="70%">
 			<p align="left">The integrated bug reporting has an extension point (org.eclipse.mylyn.tasks.bugs.support) for specifying support providers and supported products. The extensions are used to map error log entries to task repositories based on plug-in ids.</p>
 			<p class="MsoPlainText">
-			<img border="0" src="images/3.2.0/bug-reporting.png"></td>
+			<img border="0" src="images/3.2.0/bug-reporting.png">
+			<img border="0" src="images/3.2.0/report-bug.png">
+			</td>
 		</tr>
 </table>
 
